# PolyChip

./: .gitmodules  README.md  flake.nix  sourceme.sh
.claude/: CLAUDE.md
.claude/skills/ball/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: pr.yml  test.yml
arch/src/main/scala/framework/balldomain/: BallDomain.scala
arch/src/main/scala/framework/balldomain/bbus/: bbus.scala
arch/src/main/scala/framework/balldomain/blink/: SubRobRow.scala  blink.scala
arch/src/main/scala/framework/balldomain/decoder/: BallDecodeCmd.scala  BallDomainDecoder.scala
arch/src/main/scala/framework/frontend/decoder/: GobalDecoder.scala
arch/src/main/scala/framework/frontend/globalrs/: GlobalROB.scala
arch/src/main/scala/framework/memdomain/: MemDomain.scala
arch/src/main/scala/framework/memdomain/backend/: MemBackend.scala
bb-tests/workloads/: CMakeLists.txt
bb-tests/workloads/lib/bbhw/isa/: 34_mmio_set.c  35_mvin_mmio.c  51_fp2int.c  52_int2fp.c  55_mxfp2int.c  isa.h
bb-tests/workloads/lib/bbhw/mmio/: mmio_allocator.c  mmio_allocator.h
bb-tests/workloads/lib/bbsw/baremetal/: crt0.S  start.S  syscalls.c
bb-tests/workloads/src/CTest/: CMakeLists.txt
bb-tests/workloads/src/CTest/embench/: CMakeLists.txt
bb-tests/workloads/src/CTest/toy/: CMakeLists.txt  fp2int_test.c  int2fp_test.c  mmio_minimal_test.c  mvin_mvout_stride_test.c  mxfp2int_test.c  systolic_matmul_16x16_ones.c  systolic_matmul_32x32_ones.c  systolic_matmul_4x4_ones.c  systolic_matmul_8x8_ones.c
bb-tests/workloads/src/OpTest/: CMakeLists.txt
bb-tests/workloads/src/OpTest/buckyball/: CMakeLists.txt  matmul_1024x16_16x1024.mlir  matmul_1024x16_16x1024_main.c  matmul_16x64_64x16.mlir  matmul_16x64_64x16_main.c  matmul_64x16_16x64.mlir  matmul_64x16_16x64_main.c
bb-tests/workloads/src/OpTest/linalg/: CMakeLists.txt  matmul.mlir  matmul_main.c
bb-tests/workloads/src/OpTest/tile/: CMakeLists.txt  matmul_127x17_17x127.mlir  matmul_127x17_17x127_main.c  matmul_16x2048_2048x16_contract.mlir
bb-tests/workloads/src/tutorial/: CMakeLists.txt
compiler/src/Backend/include/: IntrinsicsRISCVBuckyball.td  IntrinsicsRISCVFp2IntBall.td  IntrinsicsRISCVInt2FpBall.td
compiler/src/Backend/lib/: RISCVInstrInfoBuddyExtBB.td  RISCVInstrInfoFp2IntBall.td  RISCVInstrInfoInt2FpBall.td
compiler/src/Conversion/LowerBuckyball/: AssignBuckyballBanksPass.cpp  LowerBuckyballToBankSSAPass.cpp
compiler/src/Conversion/LowerTileToBuckyball/: LowerTileToBuckyball.cpp
compiler/src/Dialect/Buckyball/: Buckyball.td  BuckyballBankSSA.td  BuckyballIntrinsics.td  Fp2IntBall.td  Int2FpBall.td  README.md
compiler/src/Dialect/Buckyball/Transforms/: LegalizeForLLVMExport.cpp
scripts/claude/: README.md  mcp_server.py
scripts/nix/: build-all.sh  build-env-bbdev.nix  build-env-python.nix
tsv-tools/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  batch_experiment_method_mt.py  build.sh  config.ini  progress.txt  run_experiments.py
tsv-tools/include/: config.hpp  grid.hpp  request.hpp  request_generator.hpp  router.hpp  simulator.hpp  statistics.hpp  tsv.hpp
tsv-tools/src/: config.cpp  grid.cpp  main.cpp  request_generator.cpp  router.cpp  simulator.cpp  statistics.cpp  tsv.cpp
tsv-tools/tests/: test_main.cpp
tsv-tools/web-nuxt/: nuxt.config.ts
tsv-tools/web-nuxt/assets/css/: globals.css
tsv-tools/web-nuxt/components/common/: ColorScale.vue  LoadingSpinner.vue
tsv-tools/web-nuxt/components/config/: SimConfigForm.vue
tsv-tools/web-nuxt/components/dashboard/: DashboardView.vue
tsv-tools/web-nuxt/components/failure/: FailureView.vue
tsv-tools/web-nuxt/components/grid3d/: Grid3DView.vue
tsv-tools/web-nuxt/components/heatmap/: HeatmapView.vue
tsv-tools/web-nuxt/components/layout/: ControlPanel.vue  TheHeader.vue  ViewSwitcher.vue
tsv-tools/web-nuxt/components/quad/: QuadLayout.vue
tsv-tools/web-nuxt/composables/: useBuildQueue.ts  useColorScale.ts  useWebSocket.ts
tsv-tools/web-nuxt/pages/: index.vue
tsv-tools/web-nuxt/server/api/: _ws.ts
tsv-tools/web-nuxt/server/utils/: simulationManager.ts
tsv-tools/web-nuxt/stores/: simulation.ts
tsv-tools/web-nuxt/types/: simulation.ts
tsv-tools/web-nuxt/utils/: colorScales.ts  formatters.ts  gridGeometry.ts
(+82 files in other folders)
